# mtk

./: .cliff.toml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml  pytest.ini
.github/workflows/: pr-validation.yml  publish.yml
scripts/: release.sh
src/mtk/: __init__.py  __main__.py  exceptions.py
src/mtk/cli/: __init__.py  analyze.py  apk.py  device.py  main.py
src/mtk/core/: __init__.py  adb.py  analyzer.py  decompiler.py  manifest.py  merger.py  patcher.py
src/mtk/models/: __init__.py  analyze.py  apk.py  device.py  manifest.py
src/mtk/utils/: __init__.py  android_sdk.py  apk.py  config.py  deps.py  output.py  process.py
tests/: README.md  __init__.py  conftest.py
tests/unit/: __init__.py
tests/unit/cli/: test_apk.py
