[project]
name = "batuta"
version = "0.1.0"
description = "Orchestrate Android reverse engineering tools into a unified security analysis pipeline"
authors = [{ name = "regne", email = "45595378+luca-regne@users.noreply.github.com" }]
requires-python = ">=3.14"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "pydantic>=2",
    "androguard>=3.3",
    "pyaxmlparser>=0.3",
]

[project.scripts]
batuta = "batuta.cli.main:app"

[dependency-groups]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
]
test = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",
]

[tool.hatch.build.targets.sdist]
include = ["src/batuta"]

[tool.hatch.build.targets.wheel]
include = ["src/batuta"]

[tool.hatch.build.targets.wheel.sources]
"src/batuta" = "batuta"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# B008: typer uses function calls in defaults by design
"src/batuta/cli/*.py" = ["B008"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_ignores = true
