[project]
name = "mobile-toolkit"
version = "2.0.0"
description = "A multi-platform mobile pentesting toolkit (Android today; iOS/IPA and device management on the roadmap)"
authors = [{ name = "regne", email = "luca@regne.me" }]
requires-python = ">=3.14"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Security",
    
]
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "pydantic>=2",
    "androguard>=3.3",
    "pyaxmlparser>=0.3",
]

[project.scripts]
mtk = "mtk.cli.main:app"
# Deprecated alias for users migrating from the old "batuta" name. Remove in the next major.
batuta = "mtk.cli.main:app"

[dependency-groups]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.sdist]
include = ["src/mtk"]

[tool.hatch.build.targets.wheel]
include = ["src/mtk"]

[tool.hatch.build.targets.wheel.sources]
"src/mtk" = "mtk"

[tool.uv]
package = true  

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# B008: typer uses function calls in defaults by design
"src/mtk/cli/*.py" = ["B008"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_ignores = true

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
